--- a/ptcg.html
+++ b/ptcg.html
@@ -132,25 +132,26 @@
 
 						</div>
 
-<!--						<div class="type-trainer flex flex-row gap-2 flex-wrap">-->
-<!--							<fieldset class="fieldset">-->
-<!--								<legend class="fieldset-legend">Trainer Subsubtype</legend>-->
-<!--								<input type="text" id="trainer-subsubtype" placeholder="e.g. Technical Machine"-->
-<!--									   class="input grow"/>-->
-<!--							</fieldset>-->
-<!--						</div>-->
+						<!--						<div class="type-trainer flex flex-row gap-2 flex-wrap">-->
+						<!--							<fieldset class="fieldset">-->
+						<!--								<legend class="fieldset-legend">Trainer Subsubtype</legend>-->
+						<!--								<input type="text" id="trainer-subsubtype" placeholder="e.g. Technical Machine"-->
+						<!--									   class="input grow"/>-->
+						<!--							</fieldset>-->
+						<!--						</div>-->
 						<div class="type-trainer">
 							<fieldset class="fieldset">
 								<legend class="fieldset-legend">Card Text</legend>
 								<textarea id="trainer-text" placeholder="e.g. Heal 30 damage from 1 of your Pokemon"
-									   class="textarea h-20"></textarea>
+										  class="textarea h-20"></textarea>
 							</fieldset>
 						</div>
 
 						<div class="type-energy">
 							<fieldset class="fieldset">
 								<legend class="fieldset-legend">Card Text</legend>
-								<textarea id="energy-text" placeholder="e.g. Attacks used by the {R} type Pokemon this card is attached to deal 20 more damage to the opponent's Active Pokemon"
+								<textarea id="energy-text"
+										  placeholder="e.g. Attacks used by the {R} type Pokemon this card is attached to deal 20 more damage to the opponent's Active Pokemon"
 										  class="textarea h-20"></textarea>
 							</fieldset>
 						</div>
@@ -200,8 +201,8 @@
 						<fieldset class="fieldset">
 							<legend class="fieldset-legend">Additional Rules</legend>
 							<textarea id="pokemon-rules"
-								   placeholder="e.g. Radiant Pokémon Rule: You can't have more than 1 Radiant Pokémon in your deck"
-								   class="textarea min-h-20"></textarea>
+									  placeholder="e.g. Radiant Pokémon Rule: You can't have more than 1 Radiant Pokémon in your deck"
+									  class="textarea min-h-20"></textarea>
 							<p class="label">Use for ex, ace spec, radiant rules, etc.</p>
 						</fieldset>
 
@@ -293,12 +294,72 @@
 		<br>
 		Pokemon TCG Search API: <a href="https://pokemontcg.io/" target="_blank" class="link">PokemonTCGIO</a>
 		<br>
-		Colored Energy Icons (except <i>Plus</i> and <i>Free</i>): <a href="https://www.deviantart.com/biochao/art/Pokemon-Trading-Card-Game-Energy-Symbols-906732898" target="_blank" class="link">Biochao <i>(via DevianArt)</i></a> (adapted by me)
+		Colored Energy Icons (except <i>Plus</i> and <i>Free</i>): <a
+			href="https://www.deviantart.com/biochao/art/Pokemon-Trading-Card-Game-Energy-Symbols-906732898"
+			target="_blank" class="link">Biochao <i>(via DevianArt)</i></a> (adapted by me)
 		<br>
 		Black and White Energy Icons: myself (original source: see: Colored Energy Icons, above)
 		<br>
 		<br>
 		<small>None of the sources above (except for myself) endorse this project in any way.</small>
+	</div>
+	<form method="dialog" class="modal-backdrop">
+		<button>Cancel</button>
+	</form>
+</dialog>
+
+<dialog id="import-cards-box" class="modal max-w-full">
+	<div class="modal-box min-w-1/3 max-w-9/10 overflow-x-auto">
+		<h2>Import Cards</h2>
+		<br>
+		<p>Paste a list of cards below. Card names must be exact (except and capitalization) and must match one of the
+			following formats (OR pasted from Limitless):</p>
+		<div class="flex flex-row w-full">
+			<div class="border p-2 w-max">
+				<p>4 TWM 128</p>
+				<p>3 TWM 129</p>
+				<p>4 PAL 185</p>
+				<p>3 SFA 61</p>
+			</div>
+			<div class="border p-2 w-max">
+				<p>4 Dreepy</p>
+				<p>4 Drakloak</p>
+				<p>4 Iono</p>
+				<p>3 Night Stretcher</p>
+			</div>
+			<div class="border p-2 w-max">
+				<p>4 Dreepy TWM 128</p>
+				<p>4 Drakloak TWM 129</p>
+				<p>4 Iono PAL 185</p>
+				<p>3 Night Stretcher SFA 61</p>
+			</div>
+		</div>
+		<br>
+		<fieldset class="fieldset">
+			<label for="import-cards-textarea"></label><textarea id="import-cards-textarea"
+																 class="input grow text-wrap min-h-20 w-full"
+																 placeholder="Cards go here..."></textarea>
+			<p class="label" id="import-cards-chunks-label"></p>
+		</fieldset>
+
+		<fieldset class="fieldset">
+			<legend class="fieldset-legend">API Key <small>(Optional)</small></legend>
+			<input type="text" id="import-cards-api-key" placeholder="e.g. <KEY>" class="input grow"/>
+			<div class="label inline">PokemonTCG.io has a rate limit of one card every 2 seconds.
+				<br>By entering an API key here, you can increase import speed drastically.<br>
+			Get your API key <a href="https://dev.pokemontcg.io/" class="link" target="_blank">here</a></div>
+		</fieldset>
+
+		<br><br>
+		<div class="flex flex-row items-center justify-center gap-4 w-full">
+			<button class="btn btn-secondary grow" id="import-cards-cancel">Cancel</button>
+			<button class="btn btn-primary grow" id="import-cards-yes">Import</button>
+		</div>
+		<br>
+
+		<p><small>
+			<i>This will overwrite all of your current cards!</i>
+		</small></p>
 	</div>
 	<form method="dialog" class="modal-backdrop">
 		<button>Cancel</button>
