--- a/ptcg.html
+++ b/ptcg.html
@@ -8,8 +8,9 @@
 
 	<link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
 
-	<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css"/>
-	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<!--	<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css"/>-->
+<!--	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>-->
+	<link rel="stylesheet" href="styles/tailwindOut.css"/>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<link href="styles/ptcg.css" rel="stylesheet"/>
