--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 	<link rel="stylesheet" href="styles/tailwindOut.css"/>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!--	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">-->
-	<link href="styles/mtg.css" rel="stylesheet"/>
 </head>
 <body data-theme="light" class="min-h-screen bg-base-100 h-min text-2xl md:text-base">
 <div class="flex flex-col justify-center items-center h-screen gap-2">
-	<h1>Simplified Proxies</h1>
-	<p>Proxies for Magic the Gathering and Pokémon Trading Card Game, Simplified!</p>
+	<h1 class="font-bold text-3xl">Simplified Proxies</h1>
+	<p>Proxies for Magic, the Gathering and Pokémon Trading Card Game, Simplified!</p>
 	<br class="mb-10"/>
 	<a class="btn btn-primary" href="mtg.html">Open Magic the Gathering editor</a>
 	<a class="btn btn-primary" href="ptcg.html">Open Pokémon Trading Card Game editor</a>
