--- a/mtg.html
+++ b/mtg.html
@@ -21,7 +21,7 @@
 <div class="flex flex-col h-screen overflow-y-none p-3 gap-2">
 
 	<div class="flex flex-col gap-2 grow max-h-screen overflow-y-auto">
-		<h1>Magic the Gathering - Simplified Proxies</h1>
+		<h1>Magic, the Gathering — Simplified Proxies</h1>
 
 		<div class="flex flex-row gap-2 grow min-h-0" id="main-container">
 
