finished carousel, merging into main:

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div id="wrapper">
 
 	<div class="preview" id="preview-mtg">
-		<img src="images/index/carousel/mtg/proxy/deflecting-swat.png" alt="deflecting-swat-proxy" class="preview-card proxy"/>
-		<img src="images/index/carousel/mtg/actual/deflecting-swat.png" alt="deflecting-swat-actual" class="preview-card actual"/>
+		<img src="images/index/carousel/mtg/proxy/deflecting-swat.png" alt="deflecting-swat-proxy" class="preview-card proxy hidden"/>
+		<img src="images/index/carousel/mtg/actual/deflecting-swat.png" alt="deflecting-swat-actual" class="preview-card actual hidden"/>
 	</div>
 
 	<div id="main-menu">
@@ -34,8 +34,8 @@
 
 
 	<div class="preview" id="preview-ptcg">
-		<img src="images/index/carousel/ptcg/proxy/gardevoir-ex.png" alt="gardevoir-ex-proxy" class="preview-card proxy"/>
-		<img src="images/index/carousel/ptcg/actual/gardevoir-ex.png" alt="gardevoir-ex-actual" class="preview-card actual"/>
+		<img src="images/index/carousel/ptcg/proxy/gardevoir-ex.png" alt="gardevoir-ex-proxy" class="preview-card proxy hidden"/>
+		<img src="images/index/carousel/ptcg/actual/gardevoir-ex.png" alt="gardevoir-ex-actual" class="preview-card actual hidden"/>
 	</div>
 
 	<script src="scripts/index/carousel.js"></script>
