credit adjustments and license

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	<link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
 	<link rel="stylesheet" href="styles/index.css"/>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
@@ -40,5 +42,13 @@
 
 	<script src="scripts/index/carousel.js"></script>
 </div>
+
+<div class="links-box">
+	<a class="github-link" href="https://github.com/mm4096/simplified-proxies" target="_blank">
+		<i class="bi bi-github"></i>
+		Github
+	</a>
+</div>
+
 </body>
 </html>
