--- a/mtg.html
+++ b/mtg.html
@@ -315,20 +315,25 @@
 	</form>
 </dialog>
 
-<dialog id="credits-box" class="modal">
-	<div class="modal-box">
+<dialog id="credits-box" class="modal w-full h-full">
+	<div class="modal-box min-w-1/2">
 		<h2>Credits</h2>
 		<br>
 		Scryfall Search API: <a href="https://scryfall.com/" target="_blank" class="link">Scryfall</a>
 		<br>
-		Colored Mana Icons: <a href="https://scryfall.com/" target="_blank" class="link">Scryfall</a> (adapted by me)
+		Original (Colored) <i>ICONS</i>: <a href="https://scryfall.com/" target="_blank" class="link">Scryfall</a> (adapted by mm4096)
 		<br>
-		Black and White Mana Icons: <i>Goblin Hero</i> via <a href="https://slightlymagic.net" target="_blank"
+		Black and White <i>ICONS</i>: <i>Goblin Hero</i> via <a href="https://slightlymagic.net" target="_blank"
 															  class="link">Slightly Magic</a> (converted to Black and
-		White by me) <small><a href="https://www.slightlymagic.net/forum/viewtopic.php?t=4430" target="_blank"
+		White by mm4096) <small><a href="https://www.slightlymagic.net/forum/viewtopic.php?t=4430" target="_blank"
 							   class="link">(Original thread)</a></small>
 		<br>
-		<small>(Scryfall doesn't endorse nor is associated with this application in any way)</small>
+		<br>
+		<small>Scryfall doesn&apos;t endorse nor is associated with this application in any way.<br>
+			Simplified Proxies&apos; <i>ICONS</i> are considered unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.
+			<br><br>
+			<i>ICONS</i> refer to Mana Symbols, Tap, Untap, Energy, and other symbols used in Magic: The Gathering.
+		</small>
 	</div>
 	<form method="dialog" class="modal-backdrop">
 		<button>Cancel</button>
